--- a/postit-template/Gemfile
+++ b/postit-template/Gemfile
@@ -13,6 +13,7 @@ gem 'jquery-rails'
 gem 'turbolinks'
 gem 'jbuilder', '~> 1.2'
 gem 'bcrypt-ruby', '~> 3.0.0'
+gem 'json', '~> 1.8.0'
 
 group :doc do
   gem 'sdoc', require: false
